# tiny_ipc

./: .gitignore  CMakeLists.txt  README.md
example/: chat.h  chat.hpp  client.cpp  server.cpp
include/tiny_ipc/: client.h  client.hpp  fd.h  fd.hpp  proto_def.h  proto_def.hpp  server_session.h  server_session.hpp
include/tiny_ipc/detail/: decode.h  decode.hpp  encode.h  encode.hpp  forward_item.h  forward_item.hpp  message_comm.h  message_comm.hpp  message_parser.h  message_parser.hpp  packet.h  packet.hpp  protocol.h  protocol.hpp  serialization_utilities.h  serialization_utilities.hpp  to_item.h
